# photographyserver

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: create_python_unit_tests.md  execute.md  plan.md
.claude/guides/: creating_python_unit_tests.md  python_unit_tests.md
docker_compose/: compose.api.yaml  compose.frontend.yaml  compose.postgres.yaml  compose.sync.yaml  docker-compose.sh
scripts/: format.sh
src/frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
src/frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
src/frontend/src/app/gallery/: page.tsx
src/frontend/src/app/gallery/[category]/: page.tsx
src/frontend/src/components/custom/: CategoryCard.tsx  PhotoGrid.tsx  RefreshButton.tsx
src/frontend/src/lib/: api.ts  utils.ts
src/frontend/src/types/: gallery.ts
src/pgs_api/: Dockerfile  Makefile  pyproject.toml  run.py
src/pgs_api/src/pgs_api/: config.py  dependencies.py  main.py
src/pgs_api/src/pgs_api/models/: __init__.py  _base.py  photos.py
src/pgs_api/src/pgs_api/repositories/: categories.py  photos.py  sync.py
src/pgs_api/src/pgs_api/routes/: categories.py  photos.py  sync.py
src/pgs_api/src/pgs_api/services/: categories.py  photos.py  sync.py
src/pgs_api/src/pgs_api/types/: category.py  healthcheck.py  sync.py
src/pgs_api/tests/routes/: test_categories.py  test_photos.py  test_sync.py
src/pgs_api/tests/services/: test_categories.py  test_photos.py  test_sync.py
src/pgs_db/: Makefile  alembic.ini  pyproject.toml
src/pgs_db/alembic/: env.py
src/pgs_db/alembic/versions/: 73e990abaede_initial_migration_add_photo_model.py
src/pgs_db/src/pgs_db/: config.py  database.py  models.py  sync.py
src/pgs_db/src/pgs_db/models/: photos.py
src/pgs_frontend/: Makefile  README.md  package-lock.json  package.json  tailwind.config.ts
src/pgs_frontend/app/: layout.tsx
src/pgs_frontend/src/app/: layout.tsx  page.tsx
src/pgs_frontend/src/app/contact/: page.tsx
src/pgs_frontend/src/components/: Carousel.tsx  NavBar.tsx
src/pgs_sync/: Dockerfile  Makefile  pyproject.toml  pytest.ini  run.py
src/pgs_sync/src/pgs_sync/: config.py  health.py  main.py  sync_engine.py  sync_types.py  types.py  utils.py  watcher.py  worker.py
src/pgs_sync/tests/: conftest.py  test_config.py  test_health.py  test_integration.py  test_performance.py  test_sync_engine.py  test_utils.py  test_watcher.py  test_worker.py
