[project]
name = "pgs"
version = "0.1.0"
description = "Photography Server (pgs) for managing and serving images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.uv.workspace]
members = [
    "src/pgs_api",
    "src/pgs_db",
    "src/pgs_sync",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # Errors
    "F",  # Pyflakes
    "N",  # Naming conventions
    "Q",  # Complexity
    "T",  # Type annotations
    "ANN",  # Annotations
]
ignore = [
    "S101" # `assert` usage
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN"]  # Ignore type annotation requirements in test files
