[project]
name = "pgs-db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/pgs_db"]
[tool.hatch.build.targets.wheel]
packages = ["src/pgs_db"]
